# ALomancy

./: .coverage  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Makefile  README.md  TESTING.md  al_wfl.py  analysis.py  coverage.xml  dft_wfl.py  felix_mace_para.py  felix_wfl.py  generate_structures.py  mace_wfl.py  md_wfl.py  pyproject.toml  pytest.ini  requirements.txt  run_tests.py  test_train_manager.py  working_versions.txt
.github/workflows/: ci.yml
archive/: demo_wfl.py
archive/one_output_attempt_fail/: generate_structures.py  md_wfl.py
docs/: conf.py  contributing.md  examples.md  index.md  installation.md  quickstart.md  tutorials.md  usage.rst
docs/api/: configs.rst  core.rst  database.rst  high_accuracy_evaluation.rst  index.rst  mlip.rst  structure_generation.rst  utils.rst
examples/: basic_use.py
examples/basic_use/: basic_use.py
examples/basic_use/input_files/: standard_config.yaml
src/ALomancy.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/alomancy/: version.py
src/alomancy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/alomancy/analysis/: analysis.py  mace_analysis.py  plotting.py
src/alomancy/configs/: config_dictionaries.py  remote_info.py  standard_config.yaml
src/alomancy/core/: base_active_learning.py  force_bias_standard_active_learning.py  standard_active_learning.py
src/alomancy/database/: __init__.py  global_database.py
src/alomancy/high_accuracry_evaluation/dft/: qe_remote_submitter.py  run_qe.py
src/alomancy/high_accuracy_evaluation/dft/: qe_remote_submitter.py  run_qe.py
src/alomancy/initialize/: amorphize.py  box.py  initialization_structure_list.py  mp_interface.py  singles_dimers_trimers.py  stretch_and_compress.py
src/alomancy/md/: md_wfl.py
src/alomancy/mlip/: committee_remote_submitter.py  get_mace_eval_info.py  mace_wfl.py
src/alomancy/mlip/mace/: mace_train_from_scratch.py
src/alomancy/remote_submission/: __init__.py  executor.py  submitters.py
src/alomancy/structure_generation/: find_high_sd_structures.py  select_initial_structures.py
src/alomancy/structure_generation/mc/: fbmc.py  test_fbmc.py
src/alomancy/structure_generation/md/: generate_structures.py  langevin_md.py  md_remote_submitter.py  md_wfl.py
src/alomancy/utils/: clean_structures.py  file_saving_and_parsing.py  logging_config.py  remote_atoms_list_submitter.py  remote_job_executor.py  test_train_manager.py
tests/: conftest.py
tests/analysis_tests/: test_plotting.py
tests/core_tests/: test_base_active_learning.py  test_standard_active_learning.py
tests/database_tests/: test_global_database.py
tests/high_acc_tests/: test_quantum_espresso.py
tests/initialize_tests/: test_amorphize.py  test_initialization.py  test_singles_dimers_trimers.py  test_stretch_and_compress.py
tests/mlip_train_tests/: test_mace_training.py
tests/struc_gen_tests/: test_structure_generation.py
tests/utils_tests/: test_utilities.py
tutorials/: water_standard.ipynb
